--- a/src/routes/moss.css
+++ b/src/routes/moss.css
@@ -254,6 +254,9 @@ a.chip {
 .mb_xl5 {
 	margin-bottom: var(--space_xl5);
 }
+.ml_sm {
+	margin-left: var(--space_sm);
+}
 .mx_auto {
 	margin-left: auto;
 	margin-right: auto;
