--- a/src/routes/moss.css
+++ b/src/routes/moss.css
@@ -67,12 +67,12 @@
 			var(--shadow_bottom_md)
 			color-mix(in hsl, var(--shadow_color) var(--shadow_alpha_3), transparent)
 	);
-	border-radius: var(--radius_xs);
+	border-radius: var(--border_radius_xs);
 }
 
 /* A panel is a box embedded into the page, useful for visually isolating content. */
 .panel {
-	border-radius: var(--radius_xs);
+	border-radius: var(--border_radius_xs);
 	background-color: var(--panel_bg, var(--fg_1));
 }
 
@@ -164,37 +164,46 @@
 	padding-left: var(--space_xs);
 	padding-right: var(--space_xs);
 	background-color: var(--fg_1);
-	border-radius: var(--radius_xs);
+	border-radius: var(--border_radius_xs);
 }
 a.chip {
 	font-weight: 700;
 }
 
 .pre {
-	font-family: var(--font_mono);
+	font-family: var(--font_family_mono);
 	color: var(--text_color, var(--text_color_3));
 	overflow: auto;
 	max-width: 100%;
 }
 .pre > code {
-	font-size: var(--size_sm); /* TODO @many use a var? maybe computed from generic `--size`? */
+	font-size: var(
+		--font_size_sm
+	); /* TODO @many use a var? maybe computed from generic `--font_size`? */
 	font-weight: 500;
 }
 .pre:not(.inline) > code {
 	display: block;
 }
 
-.inline {
-	display: inline;
+.relative {
+	position: relative;
 }
-.inline_flex {
-	display: inline-flex;
-}
-.block {
+/** Same as `display: block flow`. */
+.display_block {
 	display: block;
 }
-.flex {
+/** Same as `display: inline flow-root`. */
+.display_inline_block {
+	display: inline-block;
+}
+/** Same as `display: block flex`. */
+.display_flex {
 	display: flex;
+}
+/** Same as `display: inline flex`. */
+.display_inline_flex {
+	display: inline-flex;
 }
 .flex_1 {
 	flex: 1;
@@ -202,8 +211,8 @@ a.chip {
 .align_items_center {
 	align-items: center;
 }
-.font_mono {
-	font-family: var(--font_mono);
+.font_family_mono {
+	font-family: var(--font_family_mono);
 }
 .text_align_center {
 	text-align: center;
