--- a/src/routes/moss.css
+++ b/src/routes/moss.css
@@ -2,10 +2,10 @@
 
 /* * 
  * File statistics:
- * - Total files in filer: 253
- * - External dependencies: 231
+ * - Total files in filer: 260
+ * - External dependencies: 238
  * - Internal project files: 22
- * - Files processed (passed filter): 238
+ * - Files processed (passed filter): 245
  * - Files with CSS classes: 32
  * - Unique classes found: 44
  */
@@ -31,12 +31,12 @@
 	text-overflow: ellipsis;
 }
 
-.width_sm {
+.width_upto_sm {
 	width: 100%;
 	max-width: var(--distance_sm);
 }
 
-.width_md {
+.width_upto_md {
 	width: 100%;
 	max-width: var(--distance_md);
 }
@@ -170,14 +170,14 @@
 }
 
 .chip {
-	font-weight: 600;
+	font-weight: 500;
 	padding-left: var(--space_xs);
 	padding-right: var(--space_xs);
 	background-color: var(--fg_1);
 	border-radius: var(--border_radius_xs);
 }
 a.chip {
-	font-weight: 700;
+	font-weight: 600;
 }
 
 .pre {
@@ -199,19 +199,15 @@ a.chip {
 .position_relative {
 	position: relative;
 }
-/** Same as `display: block flow`. */
 .display_block {
 	display: block;
 }
-/** Same as `display: inline flow-root`. */
 .display_inline_block {
 	display: inline-block;
 }
-/** Same as `display: block flex`. */
 .display_flex {
 	display: flex;
 }
-/** Same as `display: inline flex`. */
 .display_inline_flex {
 	display: inline-flex;
 }
@@ -238,11 +234,8 @@ a.chip {
 	box-shadow: var(--shadow_inset_xs)
 		color-mix(in hsl, var(--shadow_color) var(--shadow_alpha, var(--shadow_alpha_1)), transparent);
 }
-.w_100 {
+.width_100 {
 	width: 100%;
-}
-.h_100 {
-	height: 100%;
 }
 .p_md {
 	padding: var(--space_md);
